--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -9,19 +9,9 @@ permissions:
   contents: read
 
 jobs:
-  copy-issues:
-    if: ${{ contains(github.actor, 'classroom') }}
-    uses: BZZ-Commons/workflows/.github/workflows/setup.yml@main
-    with:
-      SOURCE_REPO: templates-python/m319_lu04_a00_classroom  # CHANGE owner/name of the repo with the issues
-      TARGET_REPO: ${{ github.repository }}
-      ADD_LABELS: "false"
-    secrets:
-      GHSECRET: ${{ secrets.GITHUB_TOKEN }}
-
   grading:
     if: ${{ !contains(github.actor, 'classroom') }}
     uses: BZZ-Commons/workflows/.github/workflows/grading.yml@main
     with:
-      MOODLE: false  # CHANGE true=export grade to moodle
+      MOODLE: true
     secrets: inherit
